--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.1",
     "core-js": "^3.6.4",
+    "google-maps-api-loader": "^1.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
     "vue2-google-maps": "^0.10.7",
