--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@mdi/font": "^4.8.95",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.2",
     "@vue/cli-plugin-vuex": "^4.1.2",
