--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
+    "bcrypt": "^3.0.6",
     "core-js": "^3.6.4",
     "google-maps-api-loader": "^1.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
     "vue2-google-maps": "^0.10.7",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.4",
     "vuex": "^3.1.2"
   },
