--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "author": "Ilya Kudashkin <9186517121@bk.ru> and Ekaterina Bessmertnaya <tsunada@mail.ru>",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
         "concurrently": "^5.0.2",
         "config": "^3.2.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.1.0",
+        "node-pre-gyp": "^0.10.3",
         "nodemon": "^2.0.2",
         "sequelize": "^5.21.3"
     }
